Some slides for Python initation
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/python.yml
+++ b/shared/latex/python/python.yml
@@ -65,5 +65,14 @@ flavors:
     - cli
     - /questions
     - tp-cli
+  production-light:
+    - environment
+    - /questions
+    - tp-environment
+    - packaging
+    - /questions
+    - cli
+    - /questions
+    - tp-cli-light
 title: Langage Python
 version: 3
