--- a/shared/latex/about/about.yml
+++ b/shared/latex/about/about.yml
@@ -42,5 +42,5 @@ flavors:
     - ressources-eni
     - horaires-3j-orsys
     - tour2table
-title: Votre formation
+title: Informations sur la formation
 version: 3
