--- a/sparks-formation/python-administration/targets.yml
+++ b/sparks-formation/python-administration/targets.yml
@@ -1,5 +1,5 @@
-- name: j1
-  title: Jour 1
+- name: full
+  title: Formation «~Python Administration~» de 3 jours
   sections:
     - path: about
       flavor: sparks-formation-3j
@@ -7,11 +7,13 @@
     - path: python/intro
       flavor: full
 
-- name: j2
-  title: Jour 2
-  sections: []
+    - path: python/parallelism
+      flavor: full
 
-- name: j3
-  title: Jour 3
-  sections:
+    - path: python/concurrency
+      flavor: full
+
+    - path: python/signals
+      flavor: full
+
     - contact
