Add linting to python admin
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/linting/linting.yml
+++ b/shared/latex/python/linting/linting.yml
@@ -3,5 +3,8 @@ flavors:
     - linting
     - /questions
     - tp-linting
+  no-tp:
+    - linting
+    - /questions
 title: Vérifications en Python
 version: 3
