Add python basics section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/sparks-formation/python-administration/targets.yml
+++ b/sparks-formation/python-administration/targets.yml
@@ -7,6 +7,9 @@
     - path: python/intro
       flavor: full
 
+    - path: python/basics
+      flavor: full
+
     - path: python/parallelism
       flavor: full
 
