Add file manipulation section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/sparks-formation/python-administration/targets.yml
+++ b/sparks-formation/python-administration/targets.yml
@@ -10,6 +10,9 @@
     - path: python/basics
       flavor: full
 
+    - path: python/files
+      flavor: full
+
     - path: python/parallelism
       flavor: full
 
