Adjust python admin
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/production/production.yml
+++ b/shared/latex/python/production/production.yml
@@ -24,6 +24,6 @@ flavors:
     - /questions
     - /python/cli/cli
     - /questions
-    - /python/cli/tp-cli-light
+    - /python/cli/tp-cli
 title: Ingénierie de projets en Python
 version: 3
