--- a/orsys/INTRA/2020-09-natixis/latex/nn/nn.yml
+++ b/orsys/INTRA/2020-09-natixis/latex/nn/nn.yml
@@ -28,9 +28,7 @@ flavors:
     - deep-optimize
     - regularisation
     - /sequential-data/sequence-handling: Traitement de séquences
-    - cnn-data
-    - cnn-model
-    - demo-cnn
+    - $cnn: demo
     - rnn
     - lstm
     - rnn-variants
