--- a/orsys/INTRA/2021-03-STMICRO/targets.yml
+++ b/orsys/INTRA/2021-03-STMICRO/targets.yml
@@ -9,7 +9,7 @@
       flavor: full
 
     - title: Réseaux de neurones
-      path: neural-networks
+      path: nn
       flavor: deep-intro
 
     - path: tools
@@ -20,7 +20,7 @@
       flavor: tf
 
     - title: Travaux Pratiques --- Réseau de neurones avec TensorFlow
-      path: neural-networks
+      path: nn
       flavor: tp-tf-pur
 
 - name: j2
@@ -30,9 +30,8 @@
       path: tf-keras
       flavor: keras
 
-    - title: Réseaux de convolutions
-      path: neural-networks
-      flavor: cnn
+    - path: nn/cnn
+      flavor: full
 
     - path: auto-encoders
       flavor: full
@@ -52,11 +51,11 @@
       flavor: intro
 
     - title: Réseaux de neurones récurrents
-      path: neural-networks
+      path: nn
       flavor: recurrent
 
     - title: Réseaux transformeurs
-      path: neural-networks
+      path: nn
       flavor: transformer
 
     - contact
