--- a/orsys/INTRA/2021-04-BRGM/targets.yml
+++ b/orsys/INTRA/2021-04-BRGM/targets.yml
@@ -19,7 +19,7 @@
       flavor: classification
 
     - title: Réseaux de neurones
-      path: neural-networks
+      path: nn
       flavor: deep-intro
 
     - path: tools
@@ -30,7 +30,7 @@
       flavor: tf
 
     - title: Travaux Pratiques --- Réseau de neurones avec TensorFlow
-      path: neural-networks
+      path: nn
       flavor: tp-tf-pur
 
 - name: j3
@@ -41,8 +41,8 @@
       flavor: keras
 
     - title: Réseaux de convolutions
-      path: neural-networks
-      flavor: cnn
+      path: nn/cnn
+      flavor: full
 
     - path: auto-encoders
       flavor: full
@@ -62,11 +62,11 @@
       flavor: intro
 
     - title: Réseaux de neurones récurrents
-      path: neural-networks
+      path: nn
       flavor: recurrent
 
     - title: Réseaux transformeurs
-      path: neural-networks
+      path: nn
       flavor: transformer
 
     - contact
