Fix last unused flavor
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/natural-language-processing/natural-language-processing.yml
+++ b/shared/latex/natural-language-processing/natural-language-processing.yml
@@ -13,10 +13,7 @@ flavors:
   full:
     - ml-nlp
     - usages-nlp
-    - /python/regexes/regexes
-    - /questions
-    - /tp-help
-    - tp-text-regex
+    - $/python/regexes: full
     - preprocessing
     - vectors
     - /questions
