Put RNNs in a nested section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/INTRA/2020-09-natixis/latex/nn/nn.yml
+++ b/orsys/INTRA/2020-09-natixis/latex/nn/nn.yml
@@ -29,11 +29,7 @@ flavors:
     - regularisation
     - /sequential-data/sequence-handling: Traitement de séquences
     - $cnn: demo
-    - rnn
-    - lstm
-    - rnn-variants
-    - demo-rnn
-    - rnn-keras: RNN dans Keras
+    - $rnn: demo
     - attention-model: Transformeurs
     - transformer: null
     - /questions
