--- a/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
+++ b/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
@@ -63,8 +63,8 @@
     - path: natural-language-processing
       flavor: intro-nn
 
-    - path: nn
-      flavor: recurrent
+    - path: nn/rnn
+      flavor: full
 
     - path: nn
       flavor: transformer
