--- a/orsys/INTRA/2021-03-STMICRO/targets.yml
+++ b/orsys/INTRA/2021-03-STMICRO/targets.yml
@@ -51,8 +51,8 @@
       flavor: intro
 
     - title: Réseaux de neurones récurrents
-      path: nn
-      flavor: recurrent
+      path: nn/rnn
+      flavor: full
 
     - title: Réseaux transformeurs
       path: nn
