Rename intelligence-artificielle artificial-intelligence to match other sections
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/eni/ml-vue-d-ensemble-1J/targets.yml
+++ b/eni/ml-vue-d-ensemble-1J/targets.yml
@@ -5,7 +5,7 @@
       path: about
       flavor: eni-1j
 
-    - path: intelligence-artificielle
+    - path: artificial-intelligence
       flavor: full
 
     - path: machine-learning
