--- a/orsys/iao/targets.yml
+++ b/orsys/iao/targets.yml
@@ -5,7 +5,7 @@
       title: Intelligence Artificielle, enjeux et outils
       flavor: orsys-2j
 
-    - path: intelligence-artificielle
+    - path: artificial-intelligence
       flavor: full
 
     - path: machine-learning
