--- a/shared/latex/artificial-intelligence/artificial-intelligence.yml
+++ b/shared/latex/artificial-intelligence/artificial-intelligence.yml
@@ -1,10 +1,10 @@
 default_titles:
-  historique: Courte histoire de l'IA
+  history: Courte histoire de l'IA
   intro: Introduction
 flavors:
   full:
     - intro
-    - historique
+    - history
     - /questions
 title: Intelligence Artificielle
 version: 3
