Add a few items to DRN targets
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/drn/targets.yml
+++ b/orsys/drn/targets.yml
@@ -3,3 +3,15 @@
   sections:
     - path: about
       flavor: orsys-3j
+
+    - path: artificial-intelligence
+      flavor: full
+
+    - path: machine-learning
+      flavor: intro
+
+    - path: nn
+      flavor: deep-discover-demo
+
+    - path: reinforcement-learning
+      flavor: full
