Add noninteractive mode for latexmk
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/settings.yml
+++ b/settings.yml
@@ -1,6 +1,7 @@
 build_command:
   - latexmk
   - -pdflatex=xelatex -shell-escape -halt-on-error %O %S
+  - -interaction=nonstopmode
   - -dvi-
   - -ps-
   - -pdf
