--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@ name = "slides"
 version = "1.0.0"
 
 [tool.poetry.dependencies]
-Pygments = "^2.6.1"
+Pygments = "^2.9.0"
+deckz = "^13.4.1"
 python = "^3.8"
-deckz = "^13.4.0"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^20.8b1", allow-prereleases = true}
-flake8 = "^3.8.4"
+black = "^21.5b1"
+flake8 = "^3.9.2"
+
 [build-system]
 build-backend = "poetry.masonry.api"
 requires = ["poetry>=0.12"]
