--- a/shared/img/regression-hyperplan-nzmog.yml
+++ b/shared/img/regression-hyperplan-nzmog.yml
@@ -1,3 +1,4 @@
 author: F.-M. Giraud \& H. Mougard
 license: CC-BY-SA-4.0
 title: Extension de la régression linéaire quand X est de dimension 2
+title_en: Linear regression from two variables
