--- a/shared/img/regression-nzmog.yml
+++ b/shared/img/regression-nzmog.yml
@@ -1,3 +1,4 @@
 author: F.-M. Giraud \& H. Mougard
 license: CC-BY-SA-4.0
 title: Régression linaire du prix en fonction de la surface
+title_en: Linear regression of house prices based on their square footage
