translate machine learning prerequisites, evaluation and data-preparation
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/img/barplot-nzmog.yml
+++ b/shared/img/barplot-nzmog.yml
@@ -1,3 +1,4 @@
 author: F.-M. Giraud \& H. Mougard
 license: CC-BY-SA-4.0
 title: seaborn.barplot(x = 'OverallQual', y = 'SalePrice', data = ames)
+title_en: Bar plot on AMES data
