--- a/shared/img/roc-space.yml
+++ b/shared/img/roc-space.yml
@@ -1,3 +1,5 @@
 author: membre Indon de Wikimedia
+author_en: Wikimedia user Indon
 license: GFDL-1.2-or-later
 title: Espace ROC
+title_en: ROC Space
