--- a/shared/img/gradient-nzmog.yml
+++ b/shared/img/gradient-nzmog.yml
@@ -1,3 +1,4 @@
 author: F.-M. Giraud \& H. Mougard
 license: CC-BY-SA-4.0
 title: Surface de l'erreur en fonction des paramètres a et b
+title_en: Error function given parameters a and b
