--- a/shared/img/scatter-nzmog.yml
+++ b/shared/img/scatter-nzmog.yml
@@ -1,3 +1,4 @@
 author: F.-M. Giraud \& H. Mougard
 license: CC-BY-SA-4.0
 title: seaborn.jointplot(x='Surface', y='Prix')
+title_en: Scatter plot on AMES data
