--- a/shared/img/violinplot-nzmog.yml
+++ b/shared/img/violinplot-nzmog.yml
@@ -1,3 +1,4 @@
 author: F.-M. Giraud \& H. Mougard
 license: CC-BY-SA-4.0
 title: seaborn.violinplot(x=Qualité, y=Prix)
+title_en: Violin plot on AMES data
