Translate a few images
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/img/overfitting-train-nzmog.yml
+++ b/shared/img/overfitting-train-nzmog.yml
@@ -1,3 +1,4 @@
 author: F.-M. Giraud \& H. Mougard
 license: CC-BY-SA-4.0
 title: Mise en évidence du surapprentissage
+title_en: Underfit, fit \& overfit
