Translate the end of machine learning section for DRN
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/machine-learning/machine-learning.yml
+++ b/shared/latex/en/machine-learning/machine-learning.yml
@@ -1,6 +1,5 @@
 default_titles:
-  apprentissage: Learning
-  bonnes-pratiques: Good practices
+  learning: Learning
   data-preparation: Data preparation
   evaluation: Evaluation
   intro: Introduction
@@ -9,8 +8,7 @@ flavors:
     - intro
     - $prerequisites: full
     - data-preparation
+    - learning
     - evaluation
-    - apprentissage
-    - bonnes-pratiques
     - /questions
 title: Machine Learning
