Translate & nuke rl
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/drn-en/targets.yml
+++ b/orsys/drn-en/targets.yml
@@ -25,7 +25,7 @@
 - name: j5
   title: Part 5
   sections:
-    - path: reinforcement-learning
+    - path: en/reinforcement-learning
       flavor: full
 
 - name: j6
