Improve RL and GANs
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/drn-en/deck-config.yml
+++ b/orsys/drn-en/deck-config.yml
@@ -1,2 +1,2 @@
 deck_acronym: DRN
-deck_title: Deep Learning and neural networks, the fundamentals
+deck_title: Deep learning and neural networks, the fundamentals
