Improve DRN in English
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nn/cnn/cnn.yml
+++ b/shared/latex/en/nn/cnn/cnn.yml
@@ -1,11 +1,13 @@
 default_titles:
   data: Data \& tasks
   model: Model
-  generation: Generative models
+  modern-architectures: Modern CNN architectures
+  generation: Generative models building block
 flavors:
   demo:
     - data
     - model
+    - modern-architectures
     - generation
     - /questions
     - demo
